--- a/package.json
+++ b/package.json
@@ -4,18 +4,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "4.12.3",
+    "@material-ui/icons": "4.11.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
     "gh-pages": "^5.0.0",
+    "prop-types": "15.7.2",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.3",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.8.0",
+    "react-github-calendar": "3.1.2",
+    "react-multi-carousel": "^2.8.4",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.9",
+    "react-vertical-timeline-component": "3.5.2",
     "styled-components": "^5.3.9",
-    "web-vitals": "^2.1.4"
+    "typewriter-effect": "2.18.2",
+    "web-vitals": "^2.1.4",
+    "react-icons": "4.3.1"
   },
   "scripts": {
     "predeploy": "npm run build",
